log
Thu 21 Mar 2024 06:22:28 PM UTC: 
 tests:  1|4
total_score: 10/70
bc81404
Thu 21 Mar 2024 07:17:49 PM UTC: 
 exercises.c | 12 +++++++++++-
 1 file changed, 11 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:57:1: error: control reaches end of non-void function [-Werror=return-type]
   57 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
9dee33e
Thu 21 Mar 2024 07:20:06 PM UTC: 
 exercises.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  1|4
total_score: 10/70
5d93065
Thu 21 Mar 2024 07:30:31 PM UTC: 
 exercises.c | 14 +++++++++++++-
 1 file changed, 13 insertions(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
943fe10
Thu 21 Mar 2024 09:10:05 PM UTC: 
 exercises.c | 15 +++++++++++++++
 1 file changed, 15 insertions(+)
 tests:  2|3
total_score: 20/70
a39e93b
Thu 21 Mar 2024 09:16:19 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
c87136d
Fri 22 Mar 2024 08:52:17 PM UTC: 
 exercises.c | 17 +++++++++++++++++
 1 file changed, 17 insertions(+)
 tests:  4|1
total_score: 50/70
579bf91
